# ODTbrain

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py
doc/: README.md  conf.py  deploy_ghpages.py  index.rst  requirements.txt
docs/: README.md  apple.rst  conf.py  ex2d.rst  ex3d.rst  index.rst  odtbrain.bib  processing.rst  recon_2d.rst  recon_3d.rst  requirements.txt  sec_changelog.rst  sec_code_reference.rst  sec_examples.rst  sec_introduction.rst  z_bib.rst  zsec_bib.rst
examples/: backprop_2d_incomplete_coverage.py  backprop_2d_weights_angles.py  backprop_from_fdtd_2d.py  backprop_from_fdtd_3d.py  backprop_from_fdtd_3d_tilted.py  backprop_from_fdtd_3d_tilted2.py  backprop_from_mie_2d_cylinder_noncentered.py  backprop_from_mie_2d_cylinder_offcenter.py  backprop_from_mie_2d_incomplete_coverage.py  backprop_from_mie_2d_weights_angles.py  backprop_from_mie_3d_sphere.py  backprop_from_qlsi_3d_hl60.py  backprop_from_rytov_3d_phantom_apple.py  example_helper.py  generate_example_images.py  gererate_example_images.py  requirements.txt
gh_pages/: genindex.html  index.html  np-modindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
misc/: Readme.md  meep_phantom_2d.cpp  meep_phantom_3d.cpp
odtbrain/: _Back_2D.py  _Back_3D.py  _Back_3D_tilted.py  __init__.py  _alg2d_bpp.py  _alg2d_fmp.py  _alg2d_int.py  _alg3d_bpp.py  _alg3d_bppt.py  _br.py  _postproc.py  _prepare_sino.py  _preproc.py  _translate_ri.py  _util.py  _version.py  alg2d_bpp.py  alg2d_fmp.py  (+5 more)
(+50 files in other folders)
